// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accountSummaryBlock renders degraded account state 1`] = `
{
  "blocks": [
    {
      "text": {
        "emoji": true,
        "text": "Account "Degraded" last 24h",
        "type": "plain_text",
      },
      "type": "header",
    },
    {
      "text": {
        "text": ":white_check_mark: *PASSING*: 45 
 :warning: *DEGRADED*: 5 
:x: *FAILING*: 0 ",
        "type": "mrkdwn",
      },
      "type": "section",
    },
    {
      "text": {
        "text": "New degrading or failing checks detected in the last 24h.",
        "type": "mrkdwn",
      },
      "type": "section",
    },
    {
      "text": {
        "text": "*Impact Analysis:*
No failing checks detected in the last 24h.",
        "type": "mrkdwn",
      },
      "type": "section",
    },
    {
      "text": {
        "text": "*Top 3 Error Patterns:*
",
        "type": "mrkdwn",
      },
      "type": "section",
    },
    {
      "text": {
        "text": "1. \`Error Pattern #1\` (100 times)",
        "type": "mrkdwn",
      },
      "type": "section",
    },
    {
      "text": {
        "text": "2. \`Error Pattern #2\` (100 times)",
        "type": "mrkdwn",
      },
      "type": "section",
    },
    {
      "type": "divider",
    },
    {
      "elements": [
        {
          "action_id": "list_failing_checks",
          "text": {
            "emoji": true,
            "text": "List Failing Checks",
            "type": "plain_text",
          },
          "type": "button",
          "value": "123,124",
        },
        {
          "action_id": "list_error_patterns",
          "text": {
            "emoji": true,
            "text": "List Error Patterns",
            "type": "plain_text",
          },
          "type": "button",
          "value": "123,124",
        },
      ],
      "type": "actions",
    },
  ],
}
`;

exports[`accountSummaryBlock renders failing account state 1`] = `
{
  "blocks": [
    {
      "text": {
        "emoji": true,
        "text": "Account "Failing" last 24h",
        "type": "plain_text",
      },
      "type": "header",
    },
    {
      "text": {
        "text": ":white_check_mark: *PASSING*: 40 
 :warning: *DEGRADED*: 2 
:x: *FAILING*: 8 ",
        "type": "mrkdwn",
      },
      "type": "section",
    },
    {
      "text": {
        "text": "New degrading or failing checks detected in the last 24h.",
        "type": "mrkdwn",
      },
      "type": "section",
    },
    {
      "text": {
        "text": "*Impact Analysis:*
No failing checks detected in the last 24h.",
        "type": "mrkdwn",
      },
      "type": "section",
    },
    {
      "text": {
        "text": "*Top 3 Error Patterns:*
",
        "type": "mrkdwn",
      },
      "type": "section",
    },
    {
      "text": {
        "text": "1. \`Error Pattern #1\` (10 times)",
        "type": "mrkdwn",
      },
      "type": "section",
    },
    {
      "type": "divider",
    },
    {
      "elements": [
        {
          "action_id": "list_failing_checks",
          "text": {
            "emoji": true,
            "text": "List Failing Checks",
            "type": "plain_text",
          },
          "type": "button",
          "value": "123,124,125",
        },
        {
          "action_id": "list_error_patterns",
          "text": {
            "emoji": true,
            "text": "List Error Patterns",
            "type": "plain_text",
          },
          "type": "button",
          "value": "123",
        },
      ],
      "type": "actions",
    },
  ],
}
`;

exports[`accountSummaryBlock renders healthy account state 1`] = `
{
  "blocks": [
    {
      "text": {
        "emoji": true,
        "text": "Account "Healthy" last 24h",
        "type": "plain_text",
      },
      "type": "header",
    },
    {
      "text": {
        "text": ":white_check_mark: *PASSING*: 50 
 :warning: *DEGRADED*: 0 
:x: *FAILING*: 0 ",
        "type": "mrkdwn",
      },
      "type": "section",
    },
    {
      "text": {
        "text": "No issues detected in the last 24h.",
        "type": "mrkdwn",
      },
      "type": "section",
    },
    {
      "text": {
        "text": "*Impact Analysis:*
No failing checks detected in the last 24h.",
        "type": "mrkdwn",
      },
      "type": "section",
    },
  ],
}
`;
